crates/kply-cli/tests/snapshots/cli__demo_teardown_kubectl_sequence.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 503
expression: normalize_output(&log)
---
delete	namespace	kply-demo	--ignore-not-found	--wait=true	--timeout	5m
