crates/kply-cli/tests/snapshots/cli__demo_teardown_missing_kubectl.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 555
expression: normalize_output(&output)
---
kply error: demo teardown

kubectl was not found on PATH
command: kubectl
