crates/kply-cli/tests/snapshots/cli__doctor_capability_report_omits_paths.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_capability_report_output(&stdout)
---
kply doctor --capability-report
schema_version: 1
collection: opt_in
anonymized: true
omitted: paths,cluster_urls,resource_names,namespaces,hostnames,secret_values
kply_version: 0.1.0
os: <os>
arch: <arch>
config_source: explicit
config_status: unreadable
config_reason: read_error
app_count: unknown
policy_count: unknown
enabled_policy_count: unknown
kubeconfig_status: unavailable
kubeconfig_reason: missing_kubeconfig
local_tools: 4
  kubectl: present=false
  docker: present=false
  podman: present=false
  nerdctl: present=false
