crates/kply-cli/tests/snapshots/cli__doctor_text.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&output)
---
kply doctor
status: ready
checks: 3
  ok: config -> default in-memory config is valid
  ok: kubeconfig -> kubeconfig resolved for the current context
  ok: kubectl -> kubectl at <absolute-path>
