crates/kply-cli/tests/snapshots/cli__help_command.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
Top-level placeholder CLI options

Usage: kply-cli [OPTIONS] [COMMAND]

Commands:
  help        Print top-level help
  session     Manage future sandbox sessions
  app         Inspect future application targets
  config      Manage future Kply configuration
  cluster     Inspect future cluster capabilities
  completion  Generate future shell completion scripts
  report      Read future session reports

Options:
      --version        Print the kply version
      --json           Print placeholder output as JSON
      --quiet          Suppress nonessential human-readable output
      --verbose        Print local debugging details to stderr
      --no-color       Disable ANSI color output
      --config <PATH>  Specify an explicit configuration file path
      --no-config      Disable configuration discovery and loading
  -h, --help           Print help
