crates/kply-cli/tests/snapshots/cli__help_flag.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
Top-level placeholder CLI options

Usage: kply [OPTIONS] [COMMAND]

Commands:
  help     Print top-level help
  session  Manage future sandbox sessions
  app      Inspect future application targets
  config   Manage future Kply configuration
  cluster  Inspect future cluster capabilities
  report   Read future session reports

Options:
      --version  Print the kply version
      --json     Print placeholder output as JSON
      --quiet    Suppress nonessential human-readable output
      --verbose  Print local debugging details to stderr
  -h, --help     Print help
